                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-04-2006 updated: chinese (simple) langugae file (Thanks to hibaby)
 - 09-04-2006 updated: Hebrew language file (Thnx to vgs)
 - 09-04-2006 added: xml header with encoding to language files. Language files now support UTF-8
 - 09-04-2006 changed: A control set hidden from the code takes priority over visibility set from the skin.
 - 08-04-2006 added: pythonscripts can now decide what playcore to use. This allows playback of streams that mplayer does not support
 						example: xbmc.Player(xbmc.PLAYER_CORE_DVPLAYER).Play('.....');
 - 08-04-2006 fixed: [ 1459126 ] LogPath XML Setting Not Respected
 - 08-04-2006 fixed: reverted old menuoverlay fix for dvdplayer and fixed it a bit differently
 - 08-04-2006 fixed: Skin font and fanspeed setting spincontrols displayed "?-1?".
 - 08-04-2006 added: initial code to provide albumart to visualisations
 - 08-04-2006 fixed: cache function would abort if filesystem wasn't able to read the exact requested size
 - 08-04-2006 fixed: new smb would cut of end of file. it seems new smb either missdetects CAP_LARGE_READX for server (should allow 64k reads) or has wrong syntax on read, causing it allways skip half the packet, and thus abort to early. workaround in libsmb/clireadwrite.c
 - 07-04-2006 updated: libsmb updated to 3.0.22 with enabled libiconv, supports switching dos codepage gui
 - 07-04-2006 updated: finnish and plosh langugae strings.xml
              Thanks jutski and NaPeK
 - 07-04-2006 fixed: don't use fixed width character arrays on user inputable settings for smb, also reorganzed smb settings in gui